# Assortment_System_Server

./: .gitignore  .gitmodules  README.md
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-68739188806ecf11bc51.json  codemodel-v2-24bc465c2424ba86e13b.json  index-2021-10-10T12-09-32-0011.json  target-middleware-Debug-e3e90b8283c222ded864.json  target-middleware_autogen-Debug-e3c238c158d8ca64e36f.json
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Debug/.cmake/api/v1/reply.prev/: cache-v2-f73e382ec938d1df8676.json  cmakeFiles-v1-580740bcdb5948225cc0.json  codemodel-v2-e2511571fcef848143a3.json  index-2021-10-10T12-08-57-0535.json  target-middleware-Debug-6eb735847da0e75b81d7.json
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Debug/LabelLibrary_ext-prefix/src/LabelLibrary_ext-stamp/: LabelLibrary_ext-gitinfo.txt
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Debug/LabelLibrary_ext-prefix/tmp/: LabelLibrary_ext-cfgcmd.txt  LabelLibrary_ext-gitclone.cmake  LabelLibrary_ext-gitupdate.cmake
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-middleware-Desktop_Qt_5_12_7_GCC_64bit_System-Release/.cmake/api/v1/reply/: cache-v2-f04f7b93b3103b5d0644.json  cmakeFiles-v1-a9433924120bf3579042.json  codemodel-v2-8d4bcd590ce5a1a22556.json  index-2021-10-10T12-13-00-0593.json  target-middleware-Release-c358bd9bc9de5247f9fa.json  target-middleware_autogen-Release-620a7bdc265b57c3dfa8.json
build-middleware-Desktop_Qt_6_2_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-middleware-Desktop_Qt_6_2_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-fa6aae798eca1dea4f03.json  cmakeFiles-v1-73e7d36b11ccaca496b0.json  codemodel-v2-08b8e1120cdc216e552a.json  index-2021-10-10T12-13-20-0509.json  target-middleware-Debug-52a8872e0a3248c741e6.json  target-middleware_autogen-Debug-408c13baa996288fb6b1.json  target-middleware_autogen_timestamp_deps-Debug-a33ec07e39536b291591.json
build-middleware-Desktop_Qt_6_2_0_GCC_64bit-Debug/LabelLibrary_ext-prefix/tmp/: LabelLibrary_ext-cfgcmd.txt  LabelLibrary_ext-gitclone.cmake  LabelLibrary_ext-gitupdate.cmake
build-middleware-Desktop_Qt_6_2_0_GCC_64bit-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-middleware-Desktop_Qt_6_2_0_GCC_64bit-Release/.cmake/api/v1/reply/: cache-v2-75ccc4b132e517413ba2.json  cmakeFiles-v1-3deeb63b5a2d566e456b.json  codemodel-v2-c43744e9ca62ae33b645.json  index-2021-10-10T12-13-33-0370.json  target-middleware-Release-de12805f5f223a016f65.json  target-middleware_autogen-Release-db7f0c12aef8a2f7dc6e.json  target-middleware_autogen_timestamp_deps-Release-abd1e713948eed9442fc.json
database/: db-model.dbm  sql_base_script.sql
middleware/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.112b591  CMakeLists.txt.user.d3068ff  global_main.in.h  macros.cmake  main.cpp
middleware/doc/: DB_Model.md  Doxyfile.in  Search_Types.md
middleware/doc/api_doc/: API.dox  Get_All.dox  Request.dox  Result.dox  Search.dox  Search_Types.dox
middleware/etc/: config.ini
middleware/lib/: CMakeLists.txt
middleware/lib/commandThread/: CMakeLists.txt  commandthread.cpp  commandthread.h  helpC2.cpp  stopC1.cpp
middleware/lib/dbRequest/: CMakeLists.txt  dbrequest.cpp  dbrequest.h  dbsearch.cpp  dbsearch.h
middleware/lib/global/: CMakeLists.txt  global.cpp  global.h
middleware/lib/requestMapper/: CMakeLists.txt  requestmapper.cpp  requestmapper.h
middleware/lib/requestParsers/: CMakeLists.txt  apijson.cpp  apijson.h
middleware/lib/requestType/: CMakeLists.txt  requesttype.cpp  requesttype.h
middleware/lib/resultType/: CMakeLists.txt  resulttype.cpp  resulttype.h
middleware/oase_server/: CMakeLists.txt  main.cpp  templates.xml
middleware/oase_server/css/: style.css
middleware/oase_server/resources/: README.txt
middleware/oase_server/web/: CMakeLists.txt
middleware/oase_server/web/applications/: CMakeLists.txt  mainapplication.cpp  mainapplication.h
middleware/oase_server/web/models/: CMakeLists.txt  session.cpp  session.h  user.cpp  user.h  userdetailsmodel.cpp  userdetailsmodel.h
middleware/oase_server/web/widgets/: CMakeLists.txt  authwidget.cpp  authwidget.h  containerwidget.cpp  containerwidget.h  mainview.cpp  mainview.h  registrationview.cpp  registrationview.h
middleware/testEtc/: config.ini
middleware/testScripts/: in-get-parts-all.json  in-search-parts-test.json  in-search-parts.json  out-get-parts-all.json  out-search-parts.json  test.py  wsgi_app.py
